// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`agent-heartbeat procedure templates > keeps lite no-task procedure stable 1`] = `
"## Heartbeat Procedure (run every tick, in order)

1. **Identity & context** — review the **Identity Snapshot** at the top of
   this prompt. Confirm your role, soul, instructions, and memory match what
   you expect, and surface any anomalies in your first text output before
   doing anything else. The full content is in the Custom Instructions
   section of your system prompt.
2. **Inbox** — when fn_read_messages is available, call it immediately and
   process unread/pending messages before any other action; reply with
   reply_to_message_id when answering.
3. **Wake delta** — read the Wake Delta block above. The wake reason is the
   highest-priority change for this heartbeat. If you were woken by a comment
   or a message, acknowledge it before doing anything else.
   Scoped-wake: one clear message action → act and exit.
4. **Ambient review** — since you have no assigned task, review board/project
   signals and recent memory context before acting.
5. **Classify scope before acting** — label the next action as either:
   - **Board-scope execution:** work that can be completed now with ambient
     tools (coordination, delegation, messaging, memory updates).
   - **Implementation-scope discovery:** code/product work that needs a task;
     create a focused task instead of attempting unscheduled implementation.
6. **Pick the next concrete action** — exactly ONE useful action this heartbeat:
   create a focused task, delegate work, send/reply to a message, or append
   durable memory. Never retry checkout/claim conflicts.
7. **Persist progress** — use available ambient tools only:
   fn_task_create, fn_delegate_task, fn_send_message, fn_memory_append.
8. **Disposition + exit** — acted / delegated / no-op with reason, then
   fn_heartbeat_done with a one-line summary.

Critical: a heartbeat without observable progress (a created task, delegation,
message reply, memory append, or explicit "no-op with reason") is a bug. Do
not loop on the same plan across heartbeats without recording why."
`;

exports[`agent-heartbeat procedure templates > keeps lite task procedure stable 1`] = `
"## Heartbeat Procedure (run every tick, in order)

1. **Identity & context** — review the **Identity Snapshot** at the top of
   this prompt. Confirm your role, soul, instructions, and memory match what
   you expect, and surface any anomalies in your first text output before
   doing anything else. The full content is in the Custom Instructions
   section of your system prompt.
2. **Inbox** — when fn_read_messages is available, call it immediately and
   process unread/pending messages before any other action; reply with
   reply_to_message_id when answering.
3. **Wake delta** — read the Wake Delta block above. The wake reason is the
   highest-priority change for this heartbeat. If you were woken by a comment
   or a message, acknowledge it before doing anything else.
   Scoped-wake: message/comment/task_assigned with one clear action → act and exit.
4. **Assignment review** — if you have an assigned task, re-read its current
   description, latest comments, and any task documents. Decide whether the
   prior plan is still valid given the wake delta. Do not assume yesterday's
   plan is still correct. Blocked dedup: same blocker + no new context → no-op.
5. **Classify scope before acting** — label the next action as either:
   - **In-scope execution:** directly advances the assigned task's current
     acceptance criteria.
   - **Out-of-scope discovery:** useful but separate work; capture it as a
     focused follow-up task instead of expanding the current task silently.
6. **Pick the next concrete action** — exactly ONE useful action this heartbeat:
   advance the task, create a follow-up, log findings, delegate, or update
   memory. Don't stop at planning unless the task is a planning task.
   Never retry checkout/claim conflicts.
7. **Persist progress** — fn_task_log for observations, fn_task_document_write
   for durable findings, status updates only when the work warrants it.
   Note style: status line + done / remaining / next owner + FN-####.
8. **Final disposition** — acted with evidence / delegated / blocked with owner /
   explicit no-op with reason — then call fn_heartbeat_done with a one-line summary.

Critical: a heartbeat without observable progress (a log, a document write, a
status change, a comment, a delegation, or an explicit "no-op with reason") is
a bug. Do not loop on the same plan across heartbeats without recording why."
`;

exports[`agent-heartbeat procedure templates > keeps off no-task procedure stable 1`] = `
"## Heartbeat Procedure (run every tick, in order)

1. **Identity & context** — review the **Identity Snapshot** at the top of this prompt.
2. **Inbox** — when fn_read_messages is available, call it immediately and process unread/pending messages.
3. **Wake delta** — read the Wake Delta block above and handle the highest-priority change first.
4. **Pick one concrete action** — do exactly one useful thing this tick. Never retry checkout/claim conflicts.
5. **Persist progress** — use available ambient tools only.
6. **Disposition + exit** — acted / no-op with reason, then fn_heartbeat_done with a one-line summary.

Critical: a heartbeat without observable progress (or an explicit no-op reason) is a bug."
`;

exports[`agent-heartbeat procedure templates > keeps off task procedure stable 1`] = `
"## Heartbeat Procedure (run every tick, in order)

1. **Identity & context** — review the **Identity Snapshot** at the top of this prompt.
2. **Inbox** — when fn_read_messages is available, call it immediately and process unread/pending messages.
3. **Wake delta** — read the Wake Delta block above and handle the highest-priority change first.
4. **Pick one concrete action** — do exactly one useful thing this tick. Never retry checkout/claim conflicts. Same-blocker no news → no-op with reason.
5. **Persist progress** — record the action via available task/memory tools.
6. **Disposition + exit** — acted / delegated / blocked / no-op with reason, then fn_heartbeat_done with a one-line summary.

Critical: a heartbeat without observable progress (or an explicit no-op reason) is a bug."
`;

exports[`agent-heartbeat procedure templates > keeps strict no-task procedure stable 1`] = `
"## Heartbeat Procedure (run every tick, in order)

1. **Identity & context** — review the **Identity Snapshot** at the top of
   this prompt. Confirm your role, soul, instructions, and memory match what
   you expect, and surface any anomalies in your first text output before
   doing anything else. The full content is in the Custom Instructions
   section of your system prompt.
2. **Inbox** — when fn_read_messages is available, call it immediately and
   process unread/pending messages before any other action; reply with
   reply_to_message_id when answering. If Pending Room Messages are present,
   review them in the prompt and use fn_post_room_message only when relevant.
   When Room Ambiguity Notices appear, follow the resolve/clarify branch and do
   not create tasks under clarification notices. If a Room Coordination Notices
   section is present, follow its claim/defer branch exactly: under "claim" post
   a one-line claim before calling fn_task_create; under "defer-suggested" do
   NOT call fn_task_create and instead acknowledge the prior claim via
   fn_post_room_message.
3. **Wake delta** — read the Wake Delta block above. The wake reason is the
   highest-priority change for this heartbeat. If you were woken by a comment
   or a message, acknowledge it before doing anything else.
   **Scoped-wake fast path:** message/comment with one clear ambient action →
   act, disposition, exit without broad board thrash.
4. **Ambient review** — since you have no assigned task, review board/project
   signals and recent memory context before acting. No-task heartbeat runs are
   inherently coordination-class because no bound task exists to classify.
   If Wake Delta lists assigned open tasks while bind failed, treat them as
   coordination inventory (unblock/reassign/delegate), not code work.
5. **Classify scope before acting** — label the next action as either:
   - **Board-scope execution:** work that can be completed now with ambient
     tools (coordination, delegation, messaging, memory updates).
   - **Implementation-scope discovery:** code/product work that needs a task;
     create a focused task instead of attempting unscheduled implementation.
6. **Pick the next concrete action** — exactly ONE useful action this heartbeat:
   create a focused task, delegate work, send/reply to a message, or append
   durable memory. Never retry checkout/claim conflicts.
7. **Persist progress** — use available ambient tools only:
   fn_task_create, fn_delegate_task, fn_send_message, fn_memory_append.
   Note style when messaging or memory-appending: status + next owner.
8. **Final disposition checklist** — acted with evidence / follow-up created or
   delegated / explicit no-op with reason.
9. **Exit** — call fn_heartbeat_done with a one-line summary of what changed
   this tick. If you took no action, say so and explain why.

Critical: a heartbeat without observable progress (a created task, delegation,
message reply, memory append, or explicit "no-op with reason") is a bug. Do
not loop on the same plan across heartbeats without recording why."
`;

exports[`agent-heartbeat procedure templates > keeps strict task procedure stable 1`] = `
"## Heartbeat Procedure (run every tick, in order)

1. **Identity & context** — review the **Identity Snapshot** at the top of
   this prompt. Confirm your role, soul, instructions, and memory match what
   you expect, and surface any anomalies in your first text output before
   doing anything else. The full content is in the Custom Instructions
   section of your system prompt.
2. **Inbox** — when fn_read_messages is available, call it immediately and
   process unread/pending messages before any other action; reply with
   reply_to_message_id when answering. If Pending Room Messages are present,
   review them in the prompt and use fn_post_room_message only when relevant.
   When Room Ambiguity Notices appear, follow the resolve/clarify branch and do
   not create tasks under clarification notices. If a Room Coordination Notices
   section is present, follow its claim/defer branch exactly: under "claim" post
   a one-line claim before calling fn_task_create; under "defer-suggested" do
   NOT call fn_task_create and instead acknowledge the prior claim via
   fn_post_room_message.
3. **Wake delta** — read the Wake Delta block above. The wake reason is the
   highest-priority change for this heartbeat. If you were woken by a comment
   or a message, acknowledge it before doing anything else.
   **Scoped-wake fast path:** if the wake is a message, comment, or task_assigned
   signal with one clear coordination action, take that action, complete the
   disposition checklist, and exit — skip ambient board thrash.
4. **Classify the bound task** — if you have an assigned task, classify it as
   exactly one of:
   - **executor-class** — implementation work: writing code, tests,
     documentation prose, or running build/lint/typecheck.
   - **blocked** — task has blockedBy set, or is waiting on a peer / dependency
     / external input.
   - **coordination-class** — planning, triage, routing, decision-making, or
     review.
   Then branch:
   - If the bound task is **executor-class** or **blocked**, skim it once for
     blocker risk, do not re-read PROMPT.md to advance it, and pivot this
     heartbeat to broader board signals (in-progress risk scan, stale in-review
     queue, idle direct reports, and strategic themes in memory). Inbox is
     already handled in step 2. **Blocked dedup:** if you already logged the
     same blocker and Wake Delta shows no new context, do not re-chase — no-op.
   - If the bound task is **coordination-class**, engage directly with the
     bound task.
   Treat any multi-assign list in Wake Delta as coordination inventory only —
   not an implement-from-heartbeat queue.
5. **Pick the next concrete action** — exactly ONE useful action this heartbeat:
   advance the task, create a follow-up, log findings, delegate, or update
   memory. Don't stop at planning unless the task is a planning task.
   Never retry checkout/claim when another agent holds the lease.
6. **Persist progress** — fn_task_log for observations, fn_task_document_write
   for durable findings, status updates only when the work warrants it.
   Progress note style: short status line + done / remaining / next owner + FN-####.
7. **Per-tick self-check** — before exiting, verify all three:
   - Was the inbox processed?
   - Is the chosen action on a coordination-shaped lever?
   - If the bound task was executor-class, did I avoid re-planning it?
8. **Final disposition checklist** — choose exactly one before exit:
   - acted with evidence (log, document, message, delegation, or status change)
   - follow-up created or delegated with clear owner
   - blocked with named owner/action (or structured blockedBy)
   - explicit no-op with reason (including blocked dedup / empty wake)
9. **Exit** — call fn_heartbeat_done with a one-line summary of what changed
   this tick. If you took no action, say so and explain why.

Critical: a heartbeat without observable progress (a log, a document write, a
status change, a comment, a delegation, or an explicit "no-op with reason") is
a bug. Do not loop on the same plan across heartbeats without recording why."
`;
